--- a/Interface_files/WindowSignin.ui
+++ b/Interface_files/WindowSignin.ui
@@ -245,6 +245,16 @@ background-color: white;
     </widget>
    </item>
    <item>
+    <widget class="QLabel" name="label_error">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Orientation::Vertical</enum>
