--- a/Interface_files/WindowAccountLogin.ui
+++ b/Interface_files/WindowAccountLogin.ui
@@ -22,6 +22,196 @@
     <height>514</height>
    </size>
   </property>
+  <property name="palette">
+   <palette>
+    <active>
+     <colorrole role="Button">
+      <brush brushstyle="LinearGradientPattern">
+       <gradient startx="0.000000000000000" starty="0.000000000000000" endx="1.000000000000000" endy="1.000000000000000" type="LinearGradient" spread="RepeatSpread" coordinatemode="ObjectBoundingMode">
+        <gradientstop position="0.000000000000000">
+         <color alpha="255">
+          <red>255</red>
+          <green>227</green>
+          <blue>195</blue>
+         </color>
+        </gradientstop>
+        <gradientstop position="1.000000000000000">
+         <color alpha="255">
+          <red>245</red>
+          <green>78</green>
+          <blue>140</blue>
+         </color>
+        </gradientstop>
+       </gradient>
+      </brush>
+     </colorrole>
+     <colorrole role="Base">
+      <brush brushstyle="LinearGradientPattern">
+       <gradient startx="0.000000000000000" starty="0.000000000000000" endx="1.000000000000000" endy="1.000000000000000" type="LinearGradient" spread="RepeatSpread" coordinatemode="ObjectBoundingMode">
+        <gradientstop position="0.000000000000000">
+         <color alpha="255">
+          <red>255</red>
+          <green>227</green>
+          <blue>195</blue>
+         </color>
+        </gradientstop>
+        <gradientstop position="1.000000000000000">
+         <color alpha="255">
+          <red>245</red>
+          <green>78</green>
+          <blue>140</blue>
+         </color>
+        </gradientstop>
+       </gradient>
+      </brush>
+     </colorrole>
+     <colorrole role="Window">
+      <brush brushstyle="LinearGradientPattern">
+       <gradient startx="0.000000000000000" starty="0.000000000000000" endx="1.000000000000000" endy="1.000000000000000" type="LinearGradient" spread="RepeatSpread" coordinatemode="ObjectBoundingMode">
+        <gradientstop position="0.000000000000000">
+         <color alpha="255">
+          <red>255</red>
+          <green>227</green>
+          <blue>195</blue>
+         </color>
+        </gradientstop>
+        <gradientstop position="1.000000000000000">
+         <color alpha="255">
+          <red>245</red>
+          <green>78</green>
+          <blue>140</blue>
+         </color>
+        </gradientstop>
+       </gradient>
+      </brush>
+     </colorrole>
+    </active>
+    <inactive>
+     <colorrole role="Button">
+      <brush brushstyle="LinearGradientPattern">
+       <gradient startx="0.000000000000000" starty="0.000000000000000" endx="1.000000000000000" endy="1.000000000000000" type="LinearGradient" spread="RepeatSpread" coordinatemode="ObjectBoundingMode">
+        <gradientstop position="0.000000000000000">
+         <color alpha="255">
+          <red>255</red>
+          <green>227</green>
+          <blue>195</blue>
+         </color>
+        </gradientstop>
+        <gradientstop position="1.000000000000000">
+         <color alpha="255">
+          <red>245</red>
+          <green>78</green>
+          <blue>140</blue>
+         </color>
+        </gradientstop>
+       </gradient>
+      </brush>
+     </colorrole>
+     <colorrole role="Base">
+      <brush brushstyle="LinearGradientPattern">
+       <gradient startx="0.000000000000000" starty="0.000000000000000" endx="1.000000000000000" endy="1.000000000000000" type="LinearGradient" spread="RepeatSpread" coordinatemode="ObjectBoundingMode">
+        <gradientstop position="0.000000000000000">
+         <color alpha="255">
+          <red>255</red>
+          <green>227</green>
+          <blue>195</blue>
+         </color>
+        </gradientstop>
+        <gradientstop position="1.000000000000000">
+         <color alpha="255">
+          <red>245</red>
+          <green>78</green>
+          <blue>140</blue>
+         </color>
+        </gradientstop>
+       </gradient>
+      </brush>
+     </colorrole>
+     <colorrole role="Window">
+      <brush brushstyle="LinearGradientPattern">
+       <gradient startx="0.000000000000000" starty="0.000000000000000" endx="1.000000000000000" endy="1.000000000000000" type="LinearGradient" spread="RepeatSpread" coordinatemode="ObjectBoundingMode">
+        <gradientstop position="0.000000000000000">
+         <color alpha="255">
+          <red>255</red>
+          <green>227</green>
+          <blue>195</blue>
+         </color>
+        </gradientstop>
+        <gradientstop position="1.000000000000000">
+         <color alpha="255">
+          <red>245</red>
+          <green>78</green>
+          <blue>140</blue>
+         </color>
+        </gradientstop>
+       </gradient>
+      </brush>
+     </colorrole>
+    </inactive>
+    <disabled>
+     <colorrole role="Button">
+      <brush brushstyle="LinearGradientPattern">
+       <gradient startx="0.000000000000000" starty="0.000000000000000" endx="1.000000000000000" endy="1.000000000000000" type="LinearGradient" spread="RepeatSpread" coordinatemode="ObjectBoundingMode">
+        <gradientstop position="0.000000000000000">
+         <color alpha="255">
+          <red>255</red>
+          <green>227</green>
+          <blue>195</blue>
+         </color>
+        </gradientstop>
+        <gradientstop position="1.000000000000000">
+         <color alpha="255">
+          <red>245</red>
+          <green>78</green>
+          <blue>140</blue>
+         </color>
+        </gradientstop>
+       </gradient>
+      </brush>
+     </colorrole>
+     <colorrole role="Base">
+      <brush brushstyle="LinearGradientPattern">
+       <gradient startx="0.000000000000000" starty="0.000000000000000" endx="1.000000000000000" endy="1.000000000000000" type="LinearGradient" spread="RepeatSpread" coordinatemode="ObjectBoundingMode">
+        <gradientstop position="0.000000000000000">
+         <color alpha="255">
+          <red>255</red>
+          <green>227</green>
+          <blue>195</blue>
+         </color>
+        </gradientstop>
+        <gradientstop position="1.000000000000000">
+         <color alpha="255">
+          <red>245</red>
+          <green>78</green>
+          <blue>140</blue>
+         </color>
+        </gradientstop>
+       </gradient>
+      </brush>
+     </colorrole>
+     <colorrole role="Window">
+      <brush brushstyle="LinearGradientPattern">
+       <gradient startx="0.000000000000000" starty="0.000000000000000" endx="1.000000000000000" endy="1.000000000000000" type="LinearGradient" spread="RepeatSpread" coordinatemode="ObjectBoundingMode">
+        <gradientstop position="0.000000000000000">
+         <color alpha="255">
+          <red>255</red>
+          <green>227</green>
+          <blue>195</blue>
+         </color>
+        </gradientstop>
+        <gradientstop position="1.000000000000000">
+         <color alpha="255">
+          <red>245</red>
+          <green>78</green>
+          <blue>140</blue>
+         </color>
+        </gradientstop>
+       </gradient>
+      </brush>
+     </colorrole>
+    </disabled>
+   </palette>
+  </property>
   <property name="windowTitle">
    <string>Axolot's Notes - Login window</string>
   </property>
@@ -30,7 +220,8 @@
     <normaloff>:/icons/icons/axolot.png</normaloff>:/icons/icons/axolot.png</iconset>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(216, 193, 219)</string>
+   <string notr="true">background-color: qlineargradient(spread:repeat, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 227, 195, 255), stop:1 rgba(245, 78, 140, 255));
+</string>
   </property>
   <widget class="QLabel" name="label_error">
    <property name="geometry">
@@ -49,22 +240,33 @@
     <string/>
    </property>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>380</y>
-     <width>161</width>
-     <height>121</height>
+     <x>110</x>
+     <y>350</y>
+     <width>291</width>
+     <height>141</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(255, 255, 255, 30);
+border: 1px solid rgba(255, 255, 255, 40);
+border-radius: 7px;</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QPushButton" name="btn_reg">
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>18</height>
+       </size>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 background-color: white;
-font: 11pt &quot;Sitka&quot;;
+font: 14pt &quot;Sitka&quot;;
 }
 QPushButton:hover {
 background-color: rgb(225, 225, 225);
@@ -81,10 +283,16 @@ background-color: rgb(225, 225, 225);
     </item>
     <item>
      <widget class="QPushButton" name="btn_login">
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>18</height>
+       </size>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 background-color: white;
-font: 11pt &quot;Sitka&quot;;
+font: 14pt &quot;Sitka&quot;;
 color: black;
 }
 QPushButton:hover {
@@ -104,14 +312,19 @@ background-color: rgb(225, 225, 225);
    <zorder>btn_login</zorder>
    <zorder>btn_reg</zorder>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QFrame" name="frame_2">
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>100</y>
+     <y>120</y>
      <width>421</width>
      <height>131</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(255, 255, 255, 30);
+border: 1px solid rgba(255, 255, 255, 40);
+border-radius: 7px;</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_4">
     <item>
@@ -133,13 +346,13 @@ background-color: rgb(225, 225, 225);
         <property name="font">
          <font>
           <family>Sitka</family>
-          <pointsize>13</pointsize>
+          <pointsize>16</pointsize>
           <italic>false</italic>
           <bold>false</bold>
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">font: 13pt &quot;Sitka&quot;;
+         <string notr="true">font: 16pt &quot;Sitka&quot;;
 background-color: none;
 color: rgb(91, 61, 107)
 </string>
@@ -175,7 +388,7 @@ background-color: white;
          <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
         </property>
         <property name="placeholderText">
-         <string/>
+         <string>Имя пользователя</string>
         </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
@@ -203,13 +416,13 @@ background-color: white;
         <property name="font">
          <font>
           <family>Sitka</family>
-          <pointsize>13</pointsize>
+          <pointsize>16</pointsize>
           <italic>false</italic>
           <bold>false</bold>
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">font: 13pt &quot;Sitka&quot;;
+         <string notr="true">font: 16pt &quot;Sitka&quot;;
 background-color: none;
 color: rgb(91, 61, 107)</string>
         </property>
@@ -234,6 +447,9 @@ QLineEdit:pressed {
 background-color: white;
 }</string>
         </property>
+        <property name="text">
+         <string/>
+        </property>
         <property name="echoMode">
          <enum>QLineEdit::EchoMode::PasswordEchoOnEdit</enum>
         </property>
@@ -241,7 +457,7 @@ background-color: white;
          <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
         </property>
         <property name="placeholderText">
-         <string/>
+         <string>Пароль</string>
         </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
@@ -252,14 +468,18 @@ background-color: white;
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QFrame" name="frame_3">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>90</x>
      <y>10</y>
-     <width>220</width>
-     <height>81</height>
+     <width>331</width>
+     <height>83</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(255, 255, 255, 30);
+border-radius: 7px;</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_5">
     <item>
@@ -267,15 +487,17 @@ background-color: white;
       <property name="font">
        <font>
         <family>Ravie</family>
-        <pointsize>17</pointsize>
+        <pointsize>30</pointsize>
         <italic>false</italic>
-        <bold>false</bold>
+        <bold>true</bold>
         <underline>false</underline>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">font: 17pt &quot;Ravie&quot;;
-background-color: none;</string>
+       <string notr="true">font: 30pt &quot;Ravie&quot;;
+font-weight: bold;
+background-color: none;
+color: white;</string>
       </property>
       <property name="text">
        <string>Axolot's Notes</string>
@@ -296,7 +518,7 @@ background-color: none;</string>
       <property name="font">
        <font>
         <family>Sitka</family>
-        <pointsize>15</pointsize>
+        <pointsize>20</pointsize>
         <italic>false</italic>
         <bold>false</bold>
        </font>
@@ -308,7 +530,7 @@ background-color: none;</string>
        <enum>Qt::LayoutDirection::LeftToRight</enum>
       </property>
       <property name="styleSheet">
-       <string notr="true">font: 15pt &quot;Sitka&quot;;;
+       <string notr="true">font: 20pt &quot;Sitka&quot;;;
 background-color: none;
 color: rgb(91, 61, 107)
 </string>
