--- a/Interface_files/MainWNotes.ui
+++ b/Interface_files/MainWNotes.ui
@@ -119,14 +119,14 @@ background-color: rgb(255, 255, 245);
          </property>
          <property name="font">
           <font>
-           <family>Ravie</family>
+           <family>Comic Sans MS</family>
            <pointsize>30</pointsize>
            <italic>false</italic>
            <bold>true</bold>
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">font: 30pt &quot;Ravie&quot;;
+          <string notr="true">font: 30pt;
 font-weight: bold;
 background-color: none;
 color: white;</string>
@@ -382,10 +382,10 @@ border-radius: 7px;</string>
               <bool>false</bool>
              </property>
              <property name="headerHidden">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <attribute name="headerVisible">
-              <bool>false</bool>
+              <bool>true</bool>
              </attribute>
              <attribute name="headerCascadingSectionResizes">
               <bool>false</bool>
@@ -401,7 +401,17 @@ border-radius: 7px;</string>
              </attribute>
              <column>
               <property name="text">
-               <string notr="true">1</string>
+               <string>Data</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>Type</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>CreateDate</string>
               </property>
              </column>
             </widget>
